--- a/.tmux.conf
+++ b/.tmux.conf
@@ -169,7 +169,7 @@ bind P choose-buffer # choose which buffer to paste from
 
 source -q ~/.tmux.conf.local
 run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
-
+set -g default-command "${SHELL}"
 
 # EOF
 #
