--- a/kitty.conf
+++ b/kitty.conf
@@ -13,6 +13,7 @@ disable_ligatures          0
 enabled_layouts            splits
 font_family                FiraCode Nerd Font Mono
 font_size                  13.0
+hide_window_decorations    titlebar-only
 inactive_tab_font_style    (False, True)
 inactive_text_alpha        0.7
 initial_window_height      720
